# stable-fluids-

./: .gitignore  CMakeLists.txt  README.md  backend-cpu.cpp  backend-cuda.cu  backend-parallel.cpp  demo_ops.cu  main.cpp  main.cu  solver.cu  stable-fluids.h  stable_fluids.h
.github/workflows/: archlinux.yml  windows.yml
src/: solver.cu  stable_fluids.h
